RESOLVED FIXED76978
Inlining breaks call frame walking when the walking is done from outside the inlinee, but inside a code block that had inlining
https://bugs.webkit.org/show_bug.cgi?id=76978
Summary Inlining breaks call frame walking when the walking is done from outside the ...
Filip Pizlo
Reported 2012-01-24 20:46:59 PST
Patch forthcoming.
Attachments
the patch (24.56 KB, patch)
2012-01-24 20:51 PST, Filip Pizlo
oliver: review+
Filip Pizlo
Comment 1 2012-01-24 20:48:52 PST
Filip Pizlo
Comment 2 2012-01-24 20:51:00 PST
Created attachment 123879 [details] the patch
Filip Pizlo
Comment 3 2012-01-25 10:29:46 PST
Eric Seidel (no email)
Comment 4 2012-04-12 11:05:39 PDT
Eric Seidel (no email)
Comment 5 2012-04-12 11:06:02 PDT
Note You need to log in before you can comment on or make changes to this bug.