Inlining breaks call frame walking when the walking is done from outside the inlinee, but inside a code block that had inlining https://bugs.webkit.org/show_bug.cgi?id=76978 <rdar://problem/10720904>

Reviewed by Oliver Hunt.

Source/JavaScriptCore:

* bytecode/CodeBlock.h:
(JSC::CodeBlock::codeOriginForReturn):
* interpreter/CallFrame.cpp:
(JSC::CallFrame::trueCallerFrame):

LayoutTests:

* fast/js/dfg-inline-arguments-use-from-uninlined-code-expected.txt: Added.
* fast/js/dfg-inline-arguments-use-from-uninlined-code.html: Added.
* fast/js/script-tests/dfg-inline-arguments-use-from-uninlined-code.js: Added.
(foo):
(fuzz):
(bar):
(baz):



Canonical link: https://commits.webkit.org/93897@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@105894 268f45cc-cd09-0410-ab3c-d52691b4dbfc